--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/index.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/index.html.twig
@@ -7,14 +7,14 @@
     <div class="slide-list">
 
       <!-- SLIDE 1 : begin -->
-      <div class="slide slide-1 m-bg-align-right" data-label="Welcome to BEAUTYSPOT" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/demo/slide_01.jpg') }}' );">
+      <div class="slide slide-1 m-bg-align-right" data-label="Bienvenue sur NADINE COIFFURE" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/demo/slide_01.jpg') }}' );">
         <div class="slide-bg">
           <div class="container">
             <div class="slide-inner">
               <div class="slide-content various-content textalign-left valign-middle">
 
-                <h1>Welcome<br>to BEAUTYSPOT!</h1>
-                <h3>HTML Template for Beauty Salons,<br>Hairdressers, Wellness or Spa</h3>
+                <h1>Bievenue<br>sur Nadine Coiffure!</h1>
+                <h3>Salon de coiffure,<br>Hamman, Salon de beauté</h3>
 
               </div>
             </div>
@@ -24,14 +24,14 @@
       <!-- SLIDE 1 : end -->
 
       <!-- SLIDE 2 : begin -->
-      <div class="slide slide-2 m-bg-align-left" data-label="20% off All Massages" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/demo/slide_02.jpg') }}' );">
+      <div class="slide slide-2 m-bg-align-left" data-label="20% sur tous les massages" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/demo/slide_02.jpg') }}' );">
         <div class="slide-bg">
           <div class="container">
             <div class="slide-inner">
               <div class="slide-content various-content textalign-right valign-middle">
 
-                <h2>20% Off<br>All Massages</h2>
-                <h3>This Friday Only!<br><a href="reservation-form.html" class="m-open-ajax-modal">Make a Reservation</a></h3>
+                <h2>20% sur <br>Tous les Massages</h2>
+                <h3>Cette semaine seulement!<br><a href="reservation-form.html" class="m-open-ajax-modal">Faites une réservation!</a></h3>
 
               </div>
             </div>
@@ -41,14 +41,14 @@
       <!-- SLIDE 2 : end -->
 
       <!-- SLIDE 3 : begin -->
-      <div class="slide slide-3 m-bg-align-right" data-label="Eshop Launched" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/demo/slide_03.jpg') }}' );">
+      <div class="slide slide-3 m-bg-align-right" data-label="Boutique En ligne" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/demo/slide_03.jpg') }}' );">
         <div class="slide-bg">
           <div class="container">
             <div class="slide-inner">
               <div class="slide-content various-content textalign-left valign-middle">
 
-                <h2>Eshop<br>Launched</h2>
-                <h3><a href="shop-list.html">Take a Look</a> at Our Products</h3>
+                <h2>Boutique<br>En ligne</h2>
+                <h3><a href="shop-list.html">Venez regarder</a> nos produits</h3>
 
               </div>
             </div>
@@ -74,8 +74,8 @@
           <!-- SECTION HEADER : begin -->
           <header>
             <div class="container">
-              <h2>Our Services</h2>
-              <p class="subtitle">We offer a wide range of beauty services</p>
+              <h2>Nos services</h2>
+              <p class="subtitle">Nous offrons une grande gamme de services de beauté</p>
               <p class="more"><a href="services.html" class="c-button m-type-2">See all Services</a></p>
             </div>
           </header>
@@ -92,9 +92,9 @@
                     <div class="service-image">
                       <a href="services.html#cosmetics"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_01.jpg') }}" alt=""></a>
                     </div>
-                    <h3 class="service-title"><a href="services.html#cosmetics">Cosmetics</a></h3>
+                    <h3 class="service-title"><a href="services.html#cosmetics">Le hammam</a></h3>
                     <div class="service-description">
-                      <p>Facials, Eyebrow & Eyelashes, Microdermabrasion, Acne Treatments, Anti-Aging</p>
+                      <p>Venez vous détendre dans notre tout nouvel Hammam.</p>
                     </div>
                   </div>
                   <!-- SERVICE : end -->
@@ -107,9 +107,9 @@
                     <div class="service-image">
                       <a href="services.html#hairdressing"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_02.jpg') }}" alt=""></a>
                     </div>
-                    <h3 class="service-title"><a href="services.html#hairdressing">Hairdressing</a></h3>
+                    <h3 class="service-title"><a href="services.html#hairdressing">La coiffure</a></h3>
                     <div class="service-description">
-                      <p>Wash, Cut & Finish, Blow Dries, Hair Colouring & Highlights, Evening Hairdressing</p>
+                      <p>Coupe, Balayage, Teinture.</p>
                     </div>
                   </div>
                   <!-- SERVICE : end -->
@@ -122,9 +122,9 @@
                     <div class="service-image">
                       <a href="services.html#body-treatments"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_03.jpg') }}" alt=""></a>
                     </div>
-                    <h3 class="service-title"><a href="services.html#body-treatments">Body Treatments</a></h3>
+                    <h3 class="service-title"><a href="services.html#body-treatments">Les soins du corps</a></h3>
                     <div class="service-description">
-                      <p>Body Wraps, Body Exfoliation Treatments, Cellulite Treatments, Lipo Laser, Depilation</p>
+                      <p>Traitements contre la cellulite</p>
                     </div>
                   </div>
                   <!-- SERVICE : end -->
@@ -139,7 +139,7 @@
                     </div>
                     <h3 class="service-title"><a href="services.html#massages">Massages</a></h3>
                     <div class="service-description">
-                      <p>Exotic Massages, Swedish Massage, Hot Stone Massage, Aromatherapy Massage</p>
+                      <p>Massage anti-stress, massage marocain, massage thai. Ou meme massage par Issar.</p>
                     </div>
                   </div>
                   <!-- SERVICE : end -->
@@ -152,9 +152,9 @@
                     <div class="service-image">
                       <a href="services.html"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_05.jpg') }}" alt=""></a>
                     </div>
-                    <h3 class="service-title"><a href="services.html">Nails</a></h3>
+                    <h3 class="service-title"><a href="services.html">Les ongles</a></h3>
                     <div class="service-description">
-                      <p>Nail Art, Paraffin Wax Treatment, Shellac Manicure, Gel Nails, French Manicure</p>
+                      <p>French Manucure, Nail art, Pollissage</p>
                     </div>
                   </div>
                   <!-- SERVICE : end -->
@@ -174,9 +174,9 @@
           <!-- SECTION HEADER : begin -->
           <header>
             <div class="container">
-              <h2>Gallery</h2>
-              <p class="subtitle">See how it looks inside our studio</p>
-              <p class="more"><a href="gallery.html" class="c-button m-type-2">Enter Gallery</a></p>
+              <h2>Gallerie</h2>
+              <p class="subtitle">A quoi ressemble notre salon</p>
+              <p class="more"><a href="gallery.html" class="c-button m-type-2">Entrer dans la Gallerie</a></p>
             </div>
           </header>
           <!-- SECTION HEADER : end -->
@@ -206,8 +206,8 @@
           <header>
             <div class="container">
               <h2>Blog</h2>
-              <p class="subtitle">Read about latest health trends</p>
-              <p class="more"><a href="blog.html" class="c-button m-type-2">Read Blog</a></p>
+              <p class="subtitle">Lire les dernires tendances en matiere de beauté</p>
+              <p class="more"><a href="blog.html" class="c-button m-type-2">Lire notre Blog</a></p>
             </div>
           </header>
           <!-- SECTION HEADER : end -->
@@ -219,7 +219,8 @@
                 <!-- ARTICLE : begin -->
                 <article class="c-article">
                   <div class="article-image"><a href="blog-image.html"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_01.jpg') }}" alt=""></a></div>
-                  <h3 class="article-title"><a href="blog-image.html">Far far away, behind the word mountains</a></h3>
+                  <h3 class="article-title"><a href="blog-image.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor.</a></h3>
                 </article>
                 <!-- ARTICLE : end -->
 
@@ -229,7 +230,7 @@
                 <!-- ARTICLE : begin -->
                 <article class="c-article">
                   <div class="article-image"><a href="blog-image.html"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_02.jpg') }}" alt=""></a></div>
-                  <h3 class="article-title"><a href="blog-image.html">The Big Oxmox advised her not to do so</a></h3>
+                  <h3 class="article-title"><a href="blog-image.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</a></h3>
                 </article>
                 <!-- ARTICLE : end -->
 
@@ -239,7 +240,7 @@
                 <!-- ARTICLE : begin -->
                 <article class="c-article">
                   <div class="article-image"><a href="blog-image.html"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_03.jpg') }}" alt=""></a></div>
-                  <h3 class="article-title"><a href="blog-image.html">A small river named Duden flows by their place</a></h3>
+                  <h3 class="article-title"><a href="blog-image.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</a></h3>
                 </article>
                 <!-- ARTICLE : end -->
 
@@ -249,7 +250,7 @@
                 <!-- ARTICLE : begin -->
                 <article class="c-article">
                   <div class="article-image"><a href="blog-image.html"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_04.jpg') }}" alt=""></a></div>
-                  <h3 class="article-title"><a href="blog-image.html">Right at the coast of the Semantics</a></h3>
+                  <h3 class="article-title"><a href="blog-image.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</a></h3>
                 </article>
                 <!-- ARTICLE : end -->
 
@@ -266,9 +267,9 @@
           <!-- SECTION HEADER : begin -->
           <header>
             <div class="container">
-              <h2>Our Clients</h2>
-              <p class="subtitle">Read why they love us so much</p>
-              <p class="more"><a href="contact.html" class="c-button m-type-2">Become Our Client</a></p>
+              <h2>Nos clients</h2>
+              <p class="subtitle">Les avis de nos clients</p>
+              <p class="more"><a href="contact.html" class="c-button m-type-2">Devenez un client</a></p>
             </div>
           </header>
           <!-- SECTION HEADER : end -->
@@ -285,7 +286,7 @@
                       <p class="testimonial-portrait"><span><img src="{{ asset('bundles/nadinecoiffure/images/demo/client_01.jpg') }}" alt=""></span></p>
                       <blockquote>
                         <p>Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero.</p>
-                        <footer><strong>Floor Simons</strong>, Startup CEO</footer>
+                        <footer><strong>Issar Mannssour</strong>, PDG de la Fistiniere</footer>
                       </blockquote>
                     </div>
                   </div>
@@ -300,7 +301,7 @@
                       <p class="testimonial-portrait"><span><img src="{{ asset('bundles/nadinecoiffure/images/demo/client_02.jpg') }}" alt=""></span></p>
                       <blockquote>
                         <p>In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean imperdiet.</p>
-                        <footer><strong>Nikki Neil</strong>, Blogger</footer>
+                        <footer><strong>Edouard CHIN</strong>, Bloggeuse</footer>
                       </blockquote>
                     </div>
                   </div>
@@ -315,7 +316,7 @@
                       <p class="testimonial-portrait"><span><img src="{{ asset('bundles/nadinecoiffure/images/demo/client_03.jpg') }}" alt=""></span></p>
                       <blockquote>
                         <p>Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Aenean imperdiet. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Nam quam nunc.</p>
-                        <footer><strong>Tarja Lee</strong>, Writer</footer>
+                        <footer><strong>John Lee</strong>, Ecrivain</footer>
                       </blockquote>
                     </div>
                   </div>
@@ -334,7 +335,7 @@
         <section>
 
           <!-- SECTION HEADER : begin -->
-          <header>
+          {# <header>
             <div class="container">
               <h2>Our Favourite brands</h2>
               <p class="subtitle">We use only the high quality original products</p>
@@ -381,7 +382,7 @@
                 </p>
               </div>
             </div>
-          </div>
+          </div> #}
 
         </section>
         <!-- BRANDS SECTION : end -->
@@ -403,8 +404,8 @@
             <!-- BOTTOM TEXT : begin -->
             <div class="bottom-text various-content">
 
-              <h3>About Beautyspot</h3>
-              <p><strong>BEAUTYSPOT</strong> is an ideal template for <strong>beauty salon, hairdressers, wellness or spa</strong>. Clean code and top-notch web design techniques are wrapped with <strong>several gorgeous color schemes</strong> to choose from.</p><p>You can buy this responsive HTML5/CSS3 template on <a href="http://themeforest.net/user/ShakespeareThemes/portfolio?ref=LubosVolovar">ThemeForest</a>.</p>
+              <h3>A propos de Nadine Coiffure </h3>
+              <p><strong>Lorem</strong> ipsum y dolore <strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.<strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Si amet.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="http://themeforest.net/user/ShakespeareThemes/portfolio?ref=LubosVolovar">Nadine Coiffure</a>.</p>
 
             </div>
             <!-- BOTTOM TEXT : end -->
@@ -416,24 +417,24 @@
             <div class="bottom-subscribe various-content">
 
               <h3>Newsletter</h3>
-              <p>BEAUTYSPOT supports MailChimp integration.</p>
+              <p>Inscrivez vous a notre newsletter</p>
               <form id="subscribe-form" action="http://volovar.us8.list-manage.com/subscribe/post-json?u=76a50c9454ec8ab78914d1bf2&amp;id=49e892f53d&amp;c=?" method="get">
 
                 <!-- VALIDATION ERROR MESSAGE : begin -->
-                <p style="display: none;" class="c-alert-message m-warning m-validation-error"><i class="ico fa fa-exclamation-circle"></i>Email address is required.</p>
+                <p style="display: none;" class="c-alert-message m-warning m-validation-error"><i class="ico fa fa-exclamation-circle"></i>L'addresse email est requise</p>
                 <!-- VALIDATION ERROR MESSAGE : end -->
 
                 <!-- SENDING REQUEST ERROR MESSAGE : begin -->
-                <p style="display: none;" class="c-alert-message m-warning m-request-error"><i class="ico fa fa-exclamation-circle"></i>There was a connection problem. Try again later.</p>
+                <p style="display: none;" class="c-alert-message m-warning m-request-error"><i class="ico fa fa-exclamation-circle"></i>Une erreur est survenue merci de bien reessayer.</p>
                 <!-- SENDING REQUEST ERROR MESSAGE : end -->
 
                 <!-- SUCCESS MESSAGE : begin -->
-                <p style="display: none;" class="c-alert-message m-success"><i class="ico fa fa-check-circle"></i><strong>Sent successfully.</strong></p>
+                <p style="display: none;" class="c-alert-message m-success"><i class="ico fa fa-check-circle"></i><strong>Envoyer avec succes</strong></p>
                 <!-- SUCCESS MESSAGE : end -->
 
                 <div class="form-fields">
-                  <input class="m-required m-email" name="EMAIL" type="text" data-placeholder="Your email address" title="Your email address">
-                  <button class="c-button submit-btn" type="submit" data-label="Subscribe" data-loading-label="Sending...">Subscribe</button>
+                  <input class="m-required m-email" name="EMAIL" type="text" data-placeholder="Votre adresse email" title="Your email address">
+                  <button class="c-button submit-btn" type="submit" data-label="Subscribe" data-loading-label="Sending...">Inscription</button>
                 </div>
               </form>
 
