Installed liip_imagine. Added photos

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -132,7 +132,7 @@
 
                         <!-- HEADER RESERVATION : begin -->
                         <div class="header-reservation">
-                            <a href="{{ path('nadine_coiffure_front_form_open') }}" class="c-button m-open-ajax-modal">Réserver un soin</a>
+                            {# <a href="{{ path('nadine_coiffure_front_form_open') }}" class="c-button m-open-ajax-modal">Réserver un soin</a> #}
                         </div>
                         <!-- HEADER RESERVATION : end -->
 
