--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/index.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/index.html.twig
@@ -7,11 +7,11 @@
     <div class="slide-list">
 
       <!-- SLIDE 1 : begin -->
-      <div class="slide slide-1 m-bg-align-right" data-label="Bienvenue sur NADINE COIFFURE" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/demo/slide_01.jpg') }}' );">
+      <div class="slide slide-1 m-bg-align-right" data-label="Bienvenue sur NADINE COIFFURE" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/table-gommage.jpg') }}' );">
         <div class="slide-bg">
           <div class="container">
             <div class="slide-inner">
-              <div class="slide-content various-content textalign-left valign-middle">
+              <div class="slide-content various-content textalign-right valign-middle">
 
                 <h1>Bienvenue<br>sur Nadine Coiffure!</h1>
                 <h3>Salon de coiffure,<br>Hamman, Salon de beauté</h3>
@@ -24,7 +24,7 @@
       <!-- SLIDE 1 : end -->
 
       <!-- SLIDE 2 : begin -->
-      <div class="slide slide-2 m-bg-align-left" data-label="20% sur tous les massages" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/demo/slide_02.jpg') }}' );">
+      <div class="slide slide-2 m-bg-align-left" data-label="20% sur tous les massages" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/salle-attente.jpg') }}' );">
         <div class="slide-bg">
           <div class="container">
             <div class="slide-inner">
@@ -41,11 +41,11 @@
       <!-- SLIDE 2 : end -->
 
       <!-- SLIDE 3 : begin -->
-      <div class="slide slide-3 m-bg-align-right" data-label="Boutique En ligne" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/demo/slide_03.jpg') }}' );">
+      <div class="slide slide-3 m-bg-align-right" data-label="Boutique En ligne" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/salon-nadine.jpg') }}' );">
         <div class="slide-bg">
           <div class="container">
             <div class="slide-inner">
-              <div class="slide-content various-content textalign-left valign-middle">
+              <div class="slide-content various-content textalign-right valign-middle">
 
                 <h2>Boutique<br>En ligne</h2>
                 <h3><a href="shop-list.html">Venez regarder</a> nos produits</h3>
@@ -76,7 +76,7 @@
             <div class="container">
               <h2>Nos services</h2>
               <p class="subtitle">Nous offrons une grande gamme de services de beauté</p>
-              <p class="more"><a href="services.html" class="c-button m-type-2">See all Services</a></p>
+              <p class="more"><a href="services.html" class="c-button m-type-2">Nos services</a></p>
             </div>
           </header>
           <!-- SECTION HEADER : end -->
@@ -176,7 +176,7 @@
             <div class="container">
               <h2>Gallerie</h2>
               <p class="subtitle">A quoi ressemble notre salon</p>
-              <p class="more"><a href="gallery.html" class="c-button m-type-2">Entrer dans la Gallerie</a></p>
+              {# <p class="more"><a href="#" class="c-button m-type-2">Entrer dans la Gallerie</a></p> #}
             </div>
           </header>
           <!-- SECTION HEADER : end -->
@@ -184,14 +184,12 @@
           <!-- GALLERY : begin -->
           <div class="c-gallery m-paginated" data-items="4" data-items-desktop="4" data-items-desktop-small="3" data-items-tablet="2" data-items-mobile="1">
             <div class="thumb-list">
-              <div class="thumb"><a href="images/gallery_01.jpg" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/demo/gallery_01.jpg') }}" alt=""></a></div>
-              <div class="thumb"><a href="images/gallery_02.jpg" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/demo/gallery_02.jpg') }}" alt=""></a></div>
-              <div class="thumb"><a href="images/gallery_03.jpg" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/demo/gallery_03.jpg') }}" alt=""></a></div>
-              <div class="thumb"><a href="images/gallery_04.jpg" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/demo/gallery_04.jpg') }}" alt=""></a></div>
-              <div class="thumb"><a href="images/gallery_05.jpg" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/demo/gallery_05.jpg') }}" alt=""></a></div>
-              <div class="thumb"><a href="images/gallery_06.jpg" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/demo/gallery_06.jpg') }}" alt=""></a></div>
-              <div class="thumb"><a href="images/gallery_07.jpg" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/demo/gallery_07.jpg') }}" alt=""></a></div>
-              <div class="thumb"><a href="images/gallery_08.jpg" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/demo/gallery_08.jpg') }}" alt=""></a></div>
+              <div class="thumb"><a href="{{ asset('bundles/nadinecoiffure/images/bac-lavage.jpg') }}" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/bac-lavage.jpg') | imagine_filter('slider_small') }}" alt=""></a></div>
+              <div class="thumb"><a href="{{ asset('bundles/nadinecoiffure/images/bougies.jpg') }}" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/bougies.jpg') | imagine_filter('slider_small') }}" alt=""></a></div>
+              <div class="thumb"><a href="{{ asset('bundles/nadinecoiffure/images/table-massage.jpg') }}" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/table-massage.jpg') | imagine_filter('slider_small') }}" alt=""></a></div>
+              <div class="thumb"><a href="{{ asset('bundles/nadinecoiffure/images/mirroir.jpg') }}" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/mirroir.jpg') | imagine_filter('slider_small') }}" alt=""></a></div>
+              <div class="thumb"><a href="{{ asset('bundles/nadinecoiffure/images/salon-global.jpg') }}" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/salon-global.jpg') | imagine_filter('slider_small') }}" alt=""></a></div>
+              <div class="thumb"><a href="{{ asset('bundles/nadinecoiffure/images/table-gommage-portrait.jpg') }}" class="lightbox" data-lightbox-group="gallery"><img src="{{ asset('bundles/nadinecoiffure/images/table-gommage-portrait.jpg') | imagine_filter('slider_small') }}" alt=""></a></div>
             </div>
           </div>
           <!-- GALLERY : end -->
