Created the services pages.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -73,28 +73,31 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <span><a href="shop-list.html">Le hammam</a></span>
+                                    <span><a href="#">Le hammam</a></span>
                                     <ul class="sub-menu">
-                                        <li><a href="shop-list.html">Lien</a></li>
-                                        <li><a href="shop-detail.html">Lien</a></li>
-                                        <li><a href="shop-cart.html">Lien</a></li>
-                                        <li><a href="shop-checkout.html">Lien</a></li>
+                                        <li><a href="#">Lien</a></li>
+                                        <li><a href="#">Lien</a></li>
+                                        <li><a href="#">Lien</a></li>
+                                        <li><a href="#">Lien</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <span><a href="blog.html">L'esthetique</a></span>
+                                    <span><a href="#">L'esthetique</a></span>
                                     <ul class="sub-menu">
-                                        <li><a href="blog.html">Lien</a></li>
-                                        <li><a href="blog-image.html">Lien</a></li>
-                                        <li><a href="blog-video.html">Lien</a></li>
-                                        <li><a href="blog-audio.html">Lien</a></li>
-                                        <li><a href="blog-quote.html">Lien</a></li>
-                                        <li><a href="blog-link.html">Lien</a></li>
-                                        <li><a href="blog-image-disqus.html">Lien</a></li>
+                                        <li><a href="#">Lien</a></li>
+                                        <li><a href="#">Lien</a></li>
+                                        <li><a href="#">Lien</a></li>
+                                        <li><a href="#">Lien</a></li>
+                                        <li><a href="#">Lien</a></li>
+                                        <li><a href="#">Lien</a></li>
+                                        <li><a href="#">Lien</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <span><a href="contact.html">Contact</a></span>
+                                    <span><a href="#">Contact</a></span>
+                                </li>
+                                <li>
+                                    <span><a href="{{ path('nadine_coiffure_front_services') }}">Nos services</a></span>
                                 </li>
                             </ul>
                         </nav>
