Integrate the contact page

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -94,7 +94,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <span><a href="#">Contact</a></span>
+                                    <span><a href="{{ path('nadine_coiffure_front_contact') }}">Contact</a></span>
                                 </li>
                                 <li>
                                     <span><a href="{{ path('nadine_coiffure_front_services') }}">Nos services</a></span>
