--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/services.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/services.html.twig
@@ -218,7 +218,7 @@
               </div>
               <div class="col-sm-4">
                 <p class="textalign-right">
-                  <a href="#" class="c-button m-open-ajax-modal">Venez nous rendre visite</a>
+                  <a href="{{ path('nadine_coiffure_front_contact') }}" class="c-button">Venez nous rendre visite</a>
                 </p>
               </div>
             </div>
