--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/contact.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/contact.html.twig
@@ -26,7 +26,7 @@
               <!-- ADDRESS SECTION : begin -->
               <section>
 
-                <h2>Ou se site notre salon</h2>
+                <h2>Ou se situe notre salon</h2>
 
                 <div class="row">
                   <div class="col-lg-8">
@@ -49,7 +49,8 @@
                         <p>
                           <strong>NADINE COIFFURE</strong><br>
                           107 Rue de Patay<br>
-                          75013 PARIS
+                          75013 PARIS <br>
+                          <strong>01.45.83.65.02</strong>
                         </p>
                       </div>
                     </div>
