Link to the home page.

--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/services.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/services.html.twig
@@ -5,7 +5,7 @@
       <div class="container">
         <h1>Services</h1>
         <ul class="breadcrumbs">
-          <li><a href="#">Accueil</a></li>
+          <li><a href="{{ path('nadine_coiffure_front_home') }}">Accueil</a></li>
           <li>Services</li>
         </ul>
       </div>
