--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/contact.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/contact.html.twig
@@ -40,7 +40,8 @@
                   </div>
                   <div class="col-lg-4">
 
-                    <p>Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.Aliquam lorem ante, dapibus in.</p>
+                    <p><strong> Métro L14</strong> : Bibliothèque François Mitterrand<br>
+                    <strong> Bus l27, 62, 132 </strong> : station Patay Tolbiac </p>
 
                     <!-- ICON BLOCK : begin -->
                     <div class="c-icon-block">
