--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,7 +59,7 @@
                                 <li class="m-active">
                                     <span><a href="{{ path('nadine_coiffure_front_home') }}">Accueil</a></span>
                                 </li>
-                                <li>
+                                {# <li>
                                     <span><a href="#">La coiffure</a></span>
                                     <ul class="sub-menu">
                                         <li><a href="#">Lien</a></li>
@@ -92,12 +92,15 @@
                                         <li><a href="#">Lien</a></li>
                                         <li><a href="#">Lien</a></li>
                                     </ul>
-                                </li>
+                                </li> #}
                                 <li>
                                     <span><a href="{{ path('nadine_coiffure_front_contact') }}">Contact</a></span>
                                 </li>
                                 <li>
                                     <span><a href="{{ path('nadine_coiffure_front_services') }}">Nos services</a></span>
+                                </li>
+                                <li>
+                                    <span><a href="{{ path('nadine_coiffure_front_gallery') }}">Gallerie</a></span>
                                 </li>
                             </ul>
                         </nav>
@@ -212,9 +215,38 @@
 
         <!-- WRAPPER : begin -->
         <div id="wrapper">
-          {% block container %} {% endblock %}
-          <!-- FOOTER : begin -->
-          <footer id="footer">
+            {% block container %} {% endblock %}
+            <div id="bottom-panel">
+                <div class="bottom-panel-inner">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-6">
+                            <!-- BOTTOM TEXT : begin -->
+                                <div class="bottom-text various-content">
+                                    <h3>A propos de Nadine Coiffure </h3>
+                                    <p>C’est <strong>le plus ancien salon </strong> du 13éme. Nous sommes la <strong>troisième génération</strong>. Une équipe de professionnelle de coiffeuses et d'esthéticiennes vous accueille chaleureusement, pour une mise en beauté jusqu’au bout des cheveux. Nous avons participées au salon du mariage oriental 2010 journal ELLE journal gazelle</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                {# <div class="bottom-subscribe various-content">
+                                   <h3>Newsletter</h3>
+                                   <p>Inscrivez vous a notre newsletter</p>
+                                   <form id="subscribe-form" action="http://volovar.us8.list-manage.com/subscribe/post-json?u=76a50c9454ec8ab78914d1bf2&amp;id=49e892f53d&amp;c=?" method="get">
+                                        <p style="display: none;" class="c-alert-message m-warning m-validation-error"><i class="ico fa fa-exclamation-circle"></i>L'addresse email est requise</p>
+                                        <p style="display: none;" class="c-alert-message m-warning m-request-error"><i class="ico fa fa-exclamation-circle"></i>Une erreur est survenue merci de bien reessayer.</p>
+                                        <p style="display: none;" class="c-alert-message m-success"><i class="ico fa fa-check-circle"></i><strong>Envoyer avec succes</strong></p>
+                                        <div class="form-fields">
+                                            <input class="m-required m-email" name="EMAIL" type="text" data-placeholder="Votre adresse email" title="Your email address">
+                                            <button class="c-button submit-btn" type="submit" data-label="Subscribe" data-loading-label="Sending...">Inscription</button>
+                                        </div>
+                                    </form>
+                                </div>#}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          {# <footer id="footer">
             <div class="container">
               <!-- FOOTER TWITTER : begin -->
               <div class="footer-twitter m-paginated" data-id="LubosBudkovsky" data-limit="3" data-interval="12000">
@@ -244,7 +276,7 @@
                   <div class="col-md-6 col-md-pull-6">
                     <!-- FOOTER TEXT : begin -->
                     <div class="footer-text">
-                        {# <p>Buy this template on <a href="http://themeforest.net/user/LubosVolovar/portfolio?ref=LubosVolovar">ThemeForest.net</a></p> #}
+                        <p>Buy this template on <a href="http://themeforest.net/user/LubosVolovar/portfolio?ref=LubosVolovar">ThemeForest.net</a></p>
                     </div>
                     <!-- FOOTER TEXT : end -->
                   </div>
@@ -252,7 +284,7 @@
               </div>
               <!-- FOOTER BOTTOM : end -->
             </div>
-          </footer>
+          </footer> #}
           <!-- FOOTER : end -->
         </div>
         <!-- WRAPPER : end -->
