--- a/src/Nadine/CoiffureBundle/Resources/public/lib/beautyspot/css/skin/orient.css
+++ b/src/Nadine/CoiffureBundle/Resources/public/lib/beautyspot/css/skin/orient.css
@@ -2,6 +2,9 @@ body {
     color: #585858;
     background-color: #fff;
 }
+.cire {
+    width: 150px;
+}
 a, a:hover, a:active, a:focus {
     color: #935ca3;
 }
