--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/index.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/index.html.twig
@@ -24,15 +24,12 @@
       <!-- SLIDE 1 : end -->
 
       <!-- SLIDE 2 : begin -->
-      <div class="slide slide-2 m-bg-align-left" data-label="20% sur tous les massages" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/salle-attente.jpg') }}' );">
+      <div class="slide slide-2 m-bg-align-left" data-label="Hammam" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/salle-attente.jpg') }}' );">
         <div class="slide-bg">
           <div class="container">
             <div class="slide-inner">
               <div class="slide-content various-content textalign-right valign-middle">
-
-                <h2>20% sur <br>Tous les Massages</h2>
-                <h3>Cette semaine seulement!<br><a href="reservation-form.html" class="m-open-ajax-modal">Faites une réservation!</a></h3>
-
+                <h3>Venez essayez notre<br>tout nouveau Hammam</h3>
               </div>
             </div>
           </div>
@@ -41,15 +38,13 @@
       <!-- SLIDE 2 : end -->
 
       <!-- SLIDE 3 : begin -->
-      <div class="slide slide-3 m-bg-align-right" data-label="Boutique En ligne" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/salon-nadine.jpg') }}' );">
+      <div class="slide slide-3 m-bg-align-right" data-label="Salon de coiffure" style="background-image: url( '{{ asset('bundles/nadinecoiffure/images/salon-nadine.jpg') }}' );">
         <div class="slide-bg">
           <div class="container">
             <div class="slide-inner">
               <div class="slide-content various-content textalign-right valign-middle">
-
-                <h2>Boutique<br>En ligne</h2>
-                <h3><a href="shop-list.html">Venez regarder</a> nos produits</h3>
-
+                <h2>Le plus ancien <br>salon du 13eme</h2>
+                <h3><a href="#">107 Rue de Patay</a> 75013 PARIS</h3>
               </div>
             </div>
           </div>
@@ -76,7 +71,7 @@
             <div class="container">
               <h2>Nos services</h2>
               <p class="subtitle">Nous offrons une grande gamme de services de beauté</p>
-              <p class="more"><a href="services.html" class="c-button m-type-2">Nos services</a></p>
+              <p class="more"><a href="{{ path('nadine_coiffure_front_services') }}" class="c-button m-type-2">Nos services</a></p>
             </div>
           </header>
           <!-- SECTION HEADER : end -->
@@ -90,11 +85,11 @@
                   <!-- SERVICE : begin -->
                   <div class="c-service">
                     <div class="service-image">
-                      <a href="services.html#cosmetics"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_01.jpg') }}" alt=""></a>
+                      <a href="{{ path('nadine_coiffure_front_services') }}#makeup"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_01.jpg') }}" alt=""></a>
                     </div>
-                    <h3 class="service-title"><a href="services.html#cosmetics">Le hammam</a></h3>
+                    <h3 class="service-title"><a href="{{ path('nadine_coiffure_front_services') }}#makeup">Maquillage</a></h3>
                     <div class="service-description">
-                      <p>Venez vous détendre dans notre tout nouvel Hammam.</p>
+                      <p>Vous n’avez jamais rêvé d’être Cléopâtre.</p>
                     </div>
                   </div>
                   <!-- SERVICE : end -->
@@ -105,11 +100,11 @@
                   <!-- SERVICE : begin -->
                   <div class="c-service">
                     <div class="service-image">
-                      <a href="services.html#hairdressing"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_02.jpg') }}" alt=""></a>
+                      <a href="{{ path('nadine_coiffure_front_services') }}#hairdressing"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_02.jpg') }}" alt=""></a>
                     </div>
-                    <h3 class="service-title"><a href="services.html#hairdressing">La coiffure</a></h3>
+                    <h3 class="service-title"><a href="{{ path('nadine_coiffure_front_services') }}#hairdressing">La coiffure</a></h3>
                     <div class="service-description">
-                      <p>Coupe, Balayage, Teinture.</p>
+                      <p>Coupe, Balayage, Teinture, Lissage brésilien.</p>
                     </div>
                   </div>
                   <!-- SERVICE : end -->
@@ -120,11 +115,11 @@
                   <!-- SERVICE : begin -->
                   <div class="c-service">
                     <div class="service-image">
-                      <a href="services.html#body-treatments"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_03.jpg') }}" alt=""></a>
+                      <a href="{{ path('nadine_coiffure_front_services') }}#soins-du-corps"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_03.jpg') }}" alt=""></a>
                     </div>
-                    <h3 class="service-title"><a href="services.html#body-treatments">Les soins du corps</a></h3>
+                    <h3 class="service-title"><a href="{{ path('nadine_coiffure_front_services') }}#soins-du-corps">Les soins du corps</a></h3>
                     <div class="service-description">
-                      <p>Traitements contre la cellulite</p>
+                      <p>Tous plus incroyables les uns que les autre pour vous offrir les meilleurs soins du monde.</p>
                     </div>
                   </div>
                   <!-- SERVICE : end -->
@@ -135,11 +130,11 @@
                   <!-- SERVICE : begin -->
                   <div class="c-service">
                     <div class="service-image">
-                      <a href="services.html#massages"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_04.jpg') }}" alt=""></a>
+                      <a href="{{ path('nadine_coiffure_front_services') }}#massages"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_04.jpg') }}" alt=""></a>
                     </div>
-                    <h3 class="service-title"><a href="services.html#massages">Massages</a></h3>
+                    <h3 class="service-title"><a href="{{ path('nadine_coiffure_front_services') }}#massages">Massages</a></h3>
                     <div class="service-description">
-                      <p>Massage anti-stress, massage marocain, massage thai. Ou meme massage par Issar.</p>
+                      <p>Offrez vous un moment de détente à la lueur des mèches et des cires enchanteresses.</p>
                     </div>
                   </div>
                   <!-- SERVICE : end -->
@@ -150,11 +145,11 @@
                   <!-- SERVICE : begin -->
                   <div class="c-service">
                     <div class="service-image">
-                      <a href="services.html"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_05.jpg') }}" alt=""></a>
+                      <a href="{{ path('nadine_coiffure_front_services') }}#nails"><img src="{{ asset('bundles/nadinecoiffure/images/demo/service_05.jpg') }}" alt=""></a>
                     </div>
-                    <h3 class="service-title"><a href="services.html">Les ongles</a></h3>
+                    <h3 class="service-title"><a href="{{ path('nadine_coiffure_front_services') }}#nails">Les ongles</a></h3>
                     <div class="service-description">
-                      <p>French Manucure, Nail art, Pollissage</p>
+                      <p>Irrésistible par leur magie et leurs bienfaits, de quoi faire des pieds et des mains pour les découvrir.</p>
                     </div>
                   </div>
                   <!-- SERVICE : end -->
@@ -205,7 +200,7 @@
             <div class="container">
               <h2>Blog</h2>
               <p class="subtitle">Lire les dernires tendances en matiere de beauté</p>
-              <p class="more"><a href="blog.html" class="c-button m-type-2">Lire notre Blog</a></p>
+              <p class="more"><a href="#" class="c-button m-type-2">Lire notre Blog</a></p>
             </div>
           </header>
           <!-- SECTION HEADER : end -->
@@ -216,8 +211,8 @@
 
                 <!-- ARTICLE : begin -->
                 <article class="c-article">
-                  <div class="article-image"><a href="blog-image.html"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_01.jpg') }}" alt=""></a></div>
-                  <h3 class="article-title"><a href="blog-image.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  <div class="article-image"><a href="#"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_01.jpg') }}" alt=""></a></div>
+                  <h3 class="article-title"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                   tempor.</a></h3>
                 </article>
                 <!-- ARTICLE : end -->
@@ -227,8 +222,8 @@
 
                 <!-- ARTICLE : begin -->
                 <article class="c-article">
-                  <div class="article-image"><a href="blog-image.html"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_02.jpg') }}" alt=""></a></div>
-                  <h3 class="article-title"><a href="blog-image.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</a></h3>
+                  <div class="article-image"><a href="#"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_02.jpg') }}" alt=""></a></div>
+                  <h3 class="article-title"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</a></h3>
                 </article>
                 <!-- ARTICLE : end -->
 
@@ -237,8 +232,8 @@
 
                 <!-- ARTICLE : begin -->
                 <article class="c-article">
-                  <div class="article-image"><a href="blog-image.html"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_03.jpg') }}" alt=""></a></div>
-                  <h3 class="article-title"><a href="blog-image.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</a></h3>
+                  <div class="article-image"><a href="#"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_03.jpg') }}" alt=""></a></div>
+                  <h3 class="article-title"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</a></h3>
                 </article>
                 <!-- ARTICLE : end -->
 
@@ -247,8 +242,8 @@
 
                 <!-- ARTICLE : begin -->
                 <article class="c-article">
-                  <div class="article-image"><a href="blog-image.html"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_04.jpg') }}" alt=""></a></div>
-                  <h3 class="article-title"><a href="blog-image.html">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</a></h3>
+                  <div class="article-image"><a href="#"><img src="{{ asset('bundles/nadinecoiffure/images/demo/article_thumb_04.jpg') }}" alt=""></a></div>
+                  <h3 class="article-title"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</a></h3>
                 </article>
                 <!-- ARTICLE : end -->
 
@@ -267,7 +262,7 @@
             <div class="container">
               <h2>Nos clients</h2>
               <p class="subtitle">Les avis de nos clients</p>
-              <p class="more"><a href="contact.html" class="c-button m-type-2">Devenez un client</a></p>
+              <p class="more"><a href="{{ path('nadine_coiffure_front_contact') }}" class="c-button m-type-2">Contactez nous</a></p>
             </div>
           </header>
           <!-- SECTION HEADER : end -->
@@ -284,7 +279,7 @@
                       <p class="testimonial-portrait"><span><img src="{{ asset('bundles/nadinecoiffure/images/demo/client_01.jpg') }}" alt=""></span></p>
                       <blockquote>
                         <p>Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero.</p>
-                        <footer><strong>Issar Mannssour</strong>, PDG de la Fistiniere</footer>
+                        <footer><strong>Issar Mannssour</strong></footer>
                       </blockquote>
                     </div>
                   </div>
@@ -391,60 +386,5 @@
 
   </div>
   <!-- CORE : end -->
-
-  <!-- BOTTOM PANEL : begin -->
-  <div id="bottom-panel">
-    <div class="bottom-panel-inner">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-
-            <!-- BOTTOM TEXT : begin -->
-            <div class="bottom-text various-content">
-
-              <h3>A propos de Nadine Coiffure </h3>
-              <p><strong>Lorem</strong> ipsum y dolore <strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.<strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong> Si amet.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="http://themeforest.net/user/ShakespeareThemes/portfolio?ref=LubosVolovar">Nadine Coiffure</a>.</p>
-
-            </div>
-            <!-- BOTTOM TEXT : end -->
-
-          </div>
-          <div class="col-md-6">
-
-            <!-- BOTTOM SUBSCRIBE : begin -->
-            <div class="bottom-subscribe various-content">
-
-              <h3>Newsletter</h3>
-              <p>Inscrivez vous a notre newsletter</p>
-              <form id="subscribe-form" action="http://volovar.us8.list-manage.com/subscribe/post-json?u=76a50c9454ec8ab78914d1bf2&amp;id=49e892f53d&amp;c=?" method="get">
-
-                <!-- VALIDATION ERROR MESSAGE : begin -->
-                <p style="display: none;" class="c-alert-message m-warning m-validation-error"><i class="ico fa fa-exclamation-circle"></i>L'addresse email est requise</p>
-                <!-- VALIDATION ERROR MESSAGE : end -->
-
-                <!-- SENDING REQUEST ERROR MESSAGE : begin -->
-                <p style="display: none;" class="c-alert-message m-warning m-request-error"><i class="ico fa fa-exclamation-circle"></i>Une erreur est survenue merci de bien reessayer.</p>
-                <!-- SENDING REQUEST ERROR MESSAGE : end -->
-
-                <!-- SUCCESS MESSAGE : begin -->
-                <p style="display: none;" class="c-alert-message m-success"><i class="ico fa fa-check-circle"></i><strong>Envoyer avec succes</strong></p>
-                <!-- SUCCESS MESSAGE : end -->
-
-                <div class="form-fields">
-                  <input class="m-required m-email" name="EMAIL" type="text" data-placeholder="Votre adresse email" title="Your email address">
-                  <button class="c-button submit-btn" type="submit" data-label="Subscribe" data-loading-label="Sending...">Inscription</button>
-                </div>
-              </form>
-
-            </div>
-            <!-- BOTTOM SUBSCRIBE : end -->
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- BOTTOM PANEL : end -->
-
 
 {% endblock %}
