--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/gallery.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/gallery.html.twig
@@ -3,7 +3,7 @@
       <div id="core">
         <div id="page-header">
           <div class="container">
-            <h1>Gallery</h1>
+            <h1>Gallerie</h1>
             <ul class="breadcrumbs">
               <li><a href="{{ path('nadine_coiffure_front_home') }}">Accueil</a></li>
               <li>Gallerie</li>
