COmmented block and client block. Changed email.

--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/index.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/index.html.twig
@@ -193,7 +193,7 @@
         <!-- GALLERY SECTION : end -->
 
         <!-- BLOG SECTION : begin -->
-        <section>
+        {# <section>
 
           <!-- SECTION HEADER : begin -->
           <header>
@@ -251,11 +251,11 @@
             </div>
           </div>
 
-        </section>
+        </section> #}
         <!-- BLOG SECTION : end -->
 
         <!-- TESTIMONIALS SECTION : begin -->
-        <section>
+        {# <section>
 
           <!-- SECTION HEADER : begin -->
           <header>
@@ -321,7 +321,7 @@
           </div>
           <!-- TESTIMONIAL LIST : end -->
 
-        </section>
+        </section> #}
         <!-- TESTIMONIALS SECTION : end -->
 
         <!-- BRANDS SECTION : begin -->
