--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -160,7 +160,7 @@
                                 <li>
                                     <div class="item-inner">
                                         <i class="ico fa fa-envelope-o"></i>
-                                        <a href="mailto:nadine@contact.com">contact@nadine-m.fr</a>
+                                        <a href="mailto:contact@nadine-m.fr">contact@nadine-m.fr</a>
                                     </div>
                                 </li>
                                 <!-- EMAIL : end -->
