Added a new logo. Wording

--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/contact.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/contact.html.twig
@@ -41,7 +41,7 @@
                   <div class="col-lg-4">
 
                     <p><strong> Métro L14</strong> : Bibliothèque François Mitterrand<br>
-                    <strong> Bus l27, 62, 132 </strong> : station Patay Tolbiac </p>
+                    <strong> Bus 27, 62, 64, 132 </strong> : station Patay Tolbiac </p>
 
                     <!-- ICON BLOCK : begin -->
                     <div class="c-icon-block">
