Added the email on the contact page

--- a/src/Nadine/CoiffureBundle/Resources/views/Front/Default/contact.html.twig
+++ b/src/Nadine/CoiffureBundle/Resources/views/Front/Default/contact.html.twig
@@ -51,7 +51,8 @@
                           <strong>NADINE COIFFURE</strong><br>
                           107 Rue de Patay<br>
                           75013 PARIS <br>
-                          <strong>01.45.83.65.02</strong>
+                          <strong>01.45.83.65.02</strong> <br>
+                          <strong> contact@nadine-m.fr </strong>
                         </p>
                       </div>
                     </div>
