Fix broken logo

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -52,7 +52,7 @@
 
                     <!-- HEADER BRANDING : begin -->
                     <div class="header-branding">
-                        <a href="{{ path('nadine_coiffure_front_home') }}"><img src="{{ asset('bundles/nadinecoiffure/images/demo/logo.png') }}" alt="BeautySpot" data-hires="images/logo.2x.png" width="291"></a>
+                        <a href="{{ path('nadine_coiffure_front_home') }}"><img src="{{ asset('bundles/nadinecoiffure/images/demo/logo.png') }}" alt="BeautySpot" data-hires="{{ asset('bundles/nadinecoiffure/images/demo/logo.png') }}" width="291"></a>
                     </div>
                     <!-- HEADER BRANDING : end -->
 
